Thu Apr 28 22:53:16 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/config-linux-common.h (ACE_LACKS_MKSTEMP_PROTOTYPE):

	  Do not define this preprocessor symbol if _XOPEN_SOURCE_EXTENDED
	  is already defined.  Addresses mkstemp() unmatched prototype
	  related errors exhibited by g++ 4.0 on some Linux platforms.

Wed Apr 27 14:29:03 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* ace/Log_Msg.cpp (ACE_Log_Msg::log_hexdump):

	  Check log priority before allocating message buffer and
	  formatting message, an unnecessary expense if the message isn't
	  going to be output.  Thanks to <joez at datawire dot net> for
	  reporting this problem.

Wed Apr 27 20:25:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Reactor/Misc/pingpong.cpp:
          When no commandline argument has been passed, exit normally with
 	  an ACE_ERROR_RETURN instead of an abort.  Thanks to Alex Ott
 	  <ott@jet.msk.su> for reporting this.

Wed Apr 27 18:30:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Message_Block.h:
          Removed include of stdlib.h, it shouldn't be here

        * ace/Process_Semaphore.h:
        * ace/Reactor.h:
        * ace/SOCK_Stream.h:
        * ace/Task.h:
        * ace/Token_Request_Reply.h:
        * ace/UPIPE_Stream.h:
          Doxygen improvements

Wed Apr 27 15:31:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/ace_tk.mpb:
          Fixed wrong LDFLAGS. Thanks to Peter Grotrian
          <peter dot grotrian at pdv-fs dot de> for reporting this. This
          fixes bugzilla [2096]

Wed Apr 27 15:27:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Barrier.h:
        * ace/DLL.cpp:
          Added missing includes when threads=0. Thanks to Peter Grotrian
          <peter dot grotrian at pdv-fs dot de> for reporting this. This
          fixes bugzilla [2097]

Wed Apr 27 15:11:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
